# DraconicEngineFork

./: CMakeLists.txt
.github/workflows/: linux_build.yml
cmake/: Compiler.cmake  Shaders.cmake
docs/: cxxmodules.md
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt  core.cppm
engine/native/core/definitions/: definitions.cppm  stdtypes.cppm  version.cppm
engine/native/core/io/: filesystem.cpp  image_loader.cpp  image_loader.cppm
engine/native/core/math/: constants.cppm  functions.cppm  math.cppm  math.test.cpp  types_common.cppm  vector2.cppm  vector3.cppm  vector4.cppm
engine/native/core/memory/: allocator.cpp  allocator.cppm  bumpAllocator.cpp  bumpAllocator.cppm  bumpAllocator.test.cpp  fixedAllocator.cpp  fixedAllocator.cppm  fixedAllocator.test.cpp  handle_registry.cppm  pageAllocator.cpp  pageAllocator.cppm  root.cppm  slice.cppm  slot_array.cppm  trackingAllocator.cpp  trackingAllocator.cppm  trackingAllocator.test.cpp
engine/native/main/: main.cpp
engine/native/platform/: CMakeLists.txt
engine/native/platform/linux/: linux.cpp
engine/native/rendering/mesh/: mesh.cpp
engine/native/rendering/quad_renderer/: quad_renderer.cpp  quad_renderer.cppm
engine/native/rendering/renderer/: renderer.cpp  renderer.cppm
engine/native/rendering/rendergraph/: rendergraph.cpp  rendergraph.cppm
engine/native/rendering/rhi/: rhi.cppm  rhi_bgfx.cpp
engine/native/scene/: CMakeLists.txt
engine/native/scene/transform/: transform.cpp  transform.cppm
